--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@adonisjs/core": "^6.12.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.1.0",
+    "@adonisjs/redis": "^9.1.0",
+    "@adonisjs/session": "^7.4.2",
     "@vinejs/vine": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
